--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,11 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 
 # Candle collect settings
 
-candlecollect.candle-url-prefix=https://api.binance.com
-candlecollect.candle-url=/api/v3/klines
-candlecollect.candle-url-query-symbol=symbol
-candlecollect.candle-url-query-interval=interval
-candlecollect.candle-url-query-startTime=startTime
-candlecollect.candle-url-query-endTime=endTime
-candlecollect.candle-url-query-limit=limit
+histdata.url-prefix=https://api.binance.com
+histdata.url=/api/v3/klines
+histdata.url-query-symbol=symbol
+histdata.url-query-interval=interval
+histdata.url-query-startTime=startTime
+histdata.url-query-endTime=endTime
+histdata.url-query-limit=limit
 
