removed stupid BigDecimal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,13 +13,13 @@ spring.data.mongodb.port=27017
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 
-# Candle collect settings
+# Binance API config
 
-histdata.url-prefix=https://api.binance.com
-histdata.url=/api/v3/klines
-histdata.url-query-symbol=symbol
-histdata.url-query-interval=interval
-histdata.url-query-startTime=startTime
-histdata.url-query-endTime=endTime
-histdata.url-query-limit=limit
+binance.url-prefix=https://api.binance.com
+binance.klines-url=/api/v3/klines
+binance.klines-url-query-symbol=symbol
+binance.klines-url-query-interval=interval
+binance.klines-url-query-startTime=startTime
+binance.klines-url-query-endTime=endTime
+binance.klines-url-query-limit=limit
 
