--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,13 +13,28 @@ spring.data.mongodb.port=27017
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=INFO
 
+# -----------------------------------------------------------------------------------------------
 # Binance API config
+# -----------------------------------------------------------------------------------------------
+binance.chunk-max=1000
 
 binance.url-prefix=https://api.binance.com
+
+# Binance ServerTime
+binance.server-ping-url=/api/v3/ping
+
+# Binance ServerTime
+binance.server-time-url=/api/v3/time
+
+# Binance bookTicker
+binance.book-ticker-url=/api/v3/ticker/bookTicker
+binance.book-ticker-query-symbol=symbol
+
+# Binance klines
 binance.klines-url=/api/v3/klines
-binance.klines-url-query-symbol=symbol
-binance.klines-url-query-interval=interval
-binance.klines-url-query-startTime=startTime
-binance.klines-url-query-endTime=endTime
-binance.klines-url-query-limit=limit
+binance.klines-query-symbol=symbol
+binance.klines-query-interval=interval
+binance.klines-query-startTime=startTime
+binance.klines-query-endTime=endTime
+binance.klines-query-limit=limit
 
